// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> it matches with the previous snapshot (props.type="body1") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="body2") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  font-weight: 400;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline1") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 96px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline2") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 60px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline2", props.sentence=true) 1`] = `
.emotion-0 {
  display: block;
  line-height: 1.5;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 60px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline3") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 48px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline4") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 34px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline5") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 24px;
  font-weight: 700;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type="headline6") 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 20px;
  font-weight: 500;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;

exports[`<Text> it matches with the previous snapshot (props.type=undefined) 1`] = `
.emotion-0 {
  display: block;
  line-height: 1;
  color: #fff;
  font-family: Rubik;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
}

<span
  className="emotion-0"
>
  text
</span>
`;
